--- a/MobileApp/style.css
+++ b/MobileApp/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 #changebutton{
-    background-color: #B72626;
+    background-color: #2B2930;
     border-radius: 100px;
     border-color: white;
     color: white;
@@ -87,16 +87,77 @@ body{
     padding-top: 5%;
     padding-bottom: 5%;
 }
-.piccenter{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 25%;
-    border-radius: 100%;
-}
+
 #middlesettings{
     height: 80vh;
     margin-bottom: 5%;
     padding-top: 5%;
     padding-bottom: 5%;
 }
+
+
+
+.switch {
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2B2930;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2B2930;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
